--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Dash_call</title>
    <script>
       const ROOM_ID = "<%= roomId %>"
    </script>
@@ -30,9 +30,12 @@
    </style>
 </head>
 <body>
+ 
    <div class="main">
       <div class="main__left">
+        
          <div class="main__videos">
+            
             <div id="video-grid">
       
             </div>
